--- a/TractorSpecs.Infrastructure/TractorSpecs.Infrastructure.csproj
+++ b/TractorSpecs.Infrastructure/TractorSpecs.Infrastructure.csproj
@@ -99,6 +99,10 @@
     <Compile Include="Migrations\201701262142246_InitialMigration.Designer.cs">
       <DependentUpon>201701262142246_InitialMigration.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201701271315216_SchemaCorrected.cs" />
+    <Compile Include="Migrations\201701271315216_SchemaCorrected.Designer.cs">
+      <DependentUpon>201701271315216_SchemaCorrected.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
@@ -137,6 +141,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201701262142246_InitialMigration.resx">
       <DependentUpon>201701262142246_InitialMigration.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201701271315216_SchemaCorrected.resx">
+      <DependentUpon>201701271315216_SchemaCorrected.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
