--- a/TractorSpecs.Infrastructure/App.config
+++ b/TractorSpecs.Infrastructure/App.config
@@ -35,5 +35,5 @@
   </runtime>
   <connectionStrings>
     <add name="EfDataDbContext" connectionString="data source=.;initial catalog=TractorSpecsUat;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
-  </connectionStrings>
+  <add name="EfDataDbContext1" connectionString="data source=.;initial catalog=TractorSpecsUat;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" /></connectionStrings>
 </configuration>
