- Added old and new database diagrams.  - Upgraded the database models.

--- a/TractorSpecs.Core/TractorSpecs.Core.csproj
+++ b/TractorSpecs.Core/TractorSpecs.Core.csproj
@@ -125,17 +125,16 @@
     <Compile Include="Models\APIspecRequest.cs" />
     <Compile Include="Models\APISpecTracker.cs" />
     <Compile Include="Models\attachment.cs" />
-    <Compile Include="Models\b.cs" />
     <Compile Include="Models\EquipClassSpecClass.cs" />
     <Compile Include="Models\equipmentClass.cs" />
     <Compile Include="Models\link.cs" />
     <Compile Include="Models\make.cs" />
-    <Compile Include="Models\make_alias.cs" />
+    <Compile Include="Models\makeAlia.cs" />
     <Compile Include="Models\Miss.cs" />
     <Compile Include="Models\model.cs" />
+    <Compile Include="Models\modelAlia.cs" />
     <Compile Include="Models\modelPicture.cs" />
     <Compile Include="Models\modelPrice.cs" />
-    <Compile Include="Models\Model_Alias.cs" />
     <Compile Include="Models\PrintView.cs" />
     <Compile Include="Models\review.cs" />
     <Compile Include="Models\rssDealerID.cs" />
