--- a/TractorSpecs.Infrastructure/TractorSpecs.Infrastructure.csproj
+++ b/TractorSpecs.Infrastructure/TractorSpecs.Infrastructure.csproj
@@ -92,29 +92,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Data\apiKey.cs" />
-    <Compile Include="Data\apiSpecReqCounter.cs" />
-    <Compile Include="Data\apiSpecRequest.cs" />
-    <Compile Include="Data\apiSpecTracker.cs" />
-    <Compile Include="Data\attachment.cs" />
     <Compile Include="Data\EfDataDbContext.cs" />
-    <Compile Include="Data\equipClassSpecClass.cs" />
-    <Compile Include="Data\equipmentClass.cs" />
-    <Compile Include="Data\link.cs" />
-    <Compile Include="Data\make.cs" />
-    <Compile Include="Data\makeAlia.cs" />
-    <Compile Include="Data\miss.cs" />
-    <Compile Include="Data\model.cs" />
-    <Compile Include="Data\modelAlia.cs" />
-    <Compile Include="Data\modelPicture.cs" />
-    <Compile Include="Data\modelPrice.cs" />
-    <Compile Include="Data\PrintView.cs" />
-    <Compile Include="Data\review.cs" />
-    <Compile Include="Data\rssDealerID.cs" />
-    <Compile Include="Data\specChangeLog.cs" />
-    <Compile Include="Data\specClass.cs" />
-    <Compile Include="Data\specification.cs" />
-    <Compile Include="Data\specName.cs" />
     <Compile Include="Data\TrackingConfig.cs" />
     <Compile Include="Getters\EnvironmentConfigSettingsGetter.cs" />
     <Compile Include="Migrations\201701262142246_InitialMigration.cs" />
@@ -124,6 +102,10 @@
     <Compile Include="Migrations\201701271315216_SchemaCorrected.cs" />
     <Compile Include="Migrations\201701271315216_SchemaCorrected.Designer.cs">
       <DependentUpon>201701271315216_SchemaCorrected.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201701291925510_UpdatedObjectModel.cs" />
+    <Compile Include="Migrations\201701291925510_UpdatedObjectModel.Designer.cs">
+      <DependentUpon>201701291925510_UpdatedObjectModel.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -166,6 +148,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201701271315216_SchemaCorrected.resx">
       <DependentUpon>201701271315216_SchemaCorrected.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201701291925510_UpdatedObjectModel.resx">
+      <DependentUpon>201701291925510_UpdatedObjectModel.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
