--- a/TractorSpecs/TractorSpecs.csproj
+++ b/TractorSpecs/TractorSpecs.csproj
@@ -295,8 +295,11 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\makesWithModelCountController.cs" />
+    <Compile Include="Controllers\specificationsController.cs" />
+    <Compile Include="Controllers\makesController.cs" />
     <Compile Include="Controllers\usersController.cs" />
-    <Compile Include="Controllers\blogEntriesController.cs" />
+    <Compile Include="Controllers\modelsController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\MeController.cs" />
@@ -375,6 +378,10 @@
     <Content Include="wwwroot\lib\angular-animate\LICENSE.md" />
     <Content Include="wwwroot\lib\angular-animate\package.json" />
     <Content Include="wwwroot\lib\angular-animate\README.md" />
+    <Content Include="wwwroot\lib\angular-carousel\dist\angular-carousel.css" />
+    <Content Include="wwwroot\lib\angular-carousel\dist\angular-carousel.js" />
+    <Content Include="wwwroot\lib\angular-carousel\dist\angular-carousel.min.css" />
+    <Content Include="wwwroot\lib\angular-carousel\dist\angular-carousel.min.js" />
     <Content Include="wwwroot\lib\angular-route\.bower.json" />
     <Content Include="wwwroot\lib\angular-route\angular-route.min.js.map" />
     <Content Include="wwwroot\lib\angular-route\bower.json" />
@@ -387,6 +394,8 @@
     <Content Include="wwwroot\lib\angular-sessionstorage\LICENSE" />
     <Content Include="wwwroot\lib\angular-sessionstorage\package.json" />
     <Content Include="wwwroot\lib\angular-sessionstorage\README.md" />
+    <Content Include="wwwroot\lib\angular-touch\angular-touch.js" />
+    <Content Include="wwwroot\lib\angular-touch\angular-touch.min.js" />
     <Content Include="wwwroot\lib\AngularJS-Toaster\.bower.json" />
     <Content Include="wwwroot\lib\AngularJS-Toaster\bower.json" />
     <Content Include="wwwroot\lib\AngularJS-Toaster\LICENSE" />
@@ -400,109 +409,17 @@
     <Content Include="wwwroot\lib\angular\LICENSE.md" />
     <Content Include="wwwroot\lib\angular\package.json" />
     <Content Include="wwwroot\lib\angular\README.md" />
-    <Content Include="wwwroot\lib\bootstrap\.bower.json" />
-    <Content Include="wwwroot\lib\bootstrap\bower.json" />
-    <Content Include="wwwroot\lib\bootstrap\CHANGELOG.md" />
+    <Content Include="wwwroot\lib\bootstrap\dist\css\bootstrap-theme.css" />
     <Content Include="wwwroot\lib\bootstrap\dist\css\bootstrap-theme.css.map" />
+    <Content Include="wwwroot\lib\bootstrap\dist\css\bootstrap-theme.min.css" />
     <Content Include="wwwroot\lib\bootstrap\dist\css\bootstrap-theme.min.css.map" />
+    <Content Include="wwwroot\lib\bootstrap\dist\css\bootstrap.css" />
     <Content Include="wwwroot\lib\bootstrap\dist\css\bootstrap.css.map" />
+    <Content Include="wwwroot\lib\bootstrap\dist\css\bootstrap.min.css" />
     <Content Include="wwwroot\lib\bootstrap\dist\css\bootstrap.min.css.map" />
-    <Content Include="wwwroot\lib\bootstrap\dist\fonts\glyphicons-halflings-regular.eot" />
-    <Content Include="wwwroot\lib\bootstrap\dist\fonts\glyphicons-halflings-regular.ttf" />
-    <Content Include="wwwroot\lib\bootstrap\dist\fonts\glyphicons-halflings-regular.woff" />
-    <Content Include="wwwroot\lib\bootstrap\dist\fonts\glyphicons-halflings-regular.woff2" />
-    <Content Include="wwwroot\lib\bootstrap\fonts\glyphicons-halflings-regular.eot" />
-    <Content Include="wwwroot\lib\bootstrap\fonts\glyphicons-halflings-regular.ttf" />
-    <Content Include="wwwroot\lib\bootstrap\fonts\glyphicons-halflings-regular.woff" />
-    <Content Include="wwwroot\lib\bootstrap\fonts\glyphicons-halflings-regular.woff2" />
-    <Content Include="wwwroot\lib\bootstrap\Gemfile" />
-    <Content Include="wwwroot\lib\bootstrap\Gemfile.lock" />
-    <Content Include="wwwroot\lib\bootstrap\grunt\.jshintrc" />
-    <Content Include="wwwroot\lib\bootstrap\grunt\configBridge.json" />
-    <Content Include="wwwroot\lib\bootstrap\grunt\npm-shrinkwrap.json" />
-    <Content Include="wwwroot\lib\bootstrap\grunt\sauce_browsers.yml" />
-    <Content Include="wwwroot\lib\bootstrap\ISSUE_TEMPLATE.md" />
-    <Content Include="wwwroot\lib\bootstrap\js\.jscsrc" />
-    <Content Include="wwwroot\lib\bootstrap\js\.jshintrc" />
-    <Content Include="wwwroot\lib\bootstrap\less\.csscomb.json" />
-    <Content Include="wwwroot\lib\bootstrap\less\.csslintrc" />
-    <Content Include="wwwroot\lib\bootstrap\less\alerts.less" />
-    <Content Include="wwwroot\lib\bootstrap\less\badges.less" />
-    <Content Include="wwwroot\lib\bootstrap\less\bootstrap.less" />
-    <Content Include="wwwroot\lib\bootstrap\less\breadcrumbs.less" />
-    <Content Include="wwwroot\lib\bootstrap\less\button-groups.less" />
-    <Content Include="wwwroot\lib\bootstrap\less\buttons.less" />
-    <Content Include="wwwroot\lib\bootstrap\less\carousel.less" />
-    <Content Include="wwwroot\lib\bootstrap\less\close.less" />
-    <Content Include="wwwroot\lib\bootstrap\less\code.less" />
-    <Content Include="wwwroot\lib\bootstrap\less\component-animations.less" />
-    <Content Include="wwwroot\lib\bootstrap\less\dropdowns.less" />
-    <Content Include="wwwroot\lib\bootstrap\less\forms.less" />
-    <Content Include="wwwroot\lib\bootstrap\less\glyphicons.less" />
-    <Content Include="wwwroot\lib\bootstrap\less\grid.less" />
-    <Content Include="wwwroot\lib\bootstrap\less\input-groups.less" />
-    <Content Include="wwwroot\lib\bootstrap\less\jumbotron.less" />
-    <Content Include="wwwroot\lib\bootstrap\less\labels.less" />
-    <Content Include="wwwroot\lib\bootstrap\less\list-group.less" />
-    <Content Include="wwwroot\lib\bootstrap\less\media.less" />
-    <Content Include="wwwroot\lib\bootstrap\less\mixins.less" />
-    <Content Include="wwwroot\lib\bootstrap\less\mixins\alerts.less" />
-    <Content Include="wwwroot\lib\bootstrap\less\mixins\background-variant.less" />
-    <Content Include="wwwroot\lib\bootstrap\less\mixins\border-radius.less" />
-    <Content Include="wwwroot\lib\bootstrap\less\mixins\buttons.less" />
-    <Content Include="wwwroot\lib\bootstrap\less\mixins\center-block.less" />
-    <Content Include="wwwroot\lib\bootstrap\less\mixins\clearfix.less" />
-    <Content Include="wwwroot\lib\bootstrap\less\mixins\forms.less" />
-    <Content Include="wwwroot\lib\bootstrap\less\mixins\gradients.less" />
-    <Content Include="wwwroot\lib\bootstrap\less\mixins\grid-framework.less" />
-    <Content Include="wwwroot\lib\bootstrap\less\mixins\grid.less" />
-    <Content Include="wwwroot\lib\bootstrap\less\mixins\hide-text.less" />
-    <Content Include="wwwroot\lib\bootstrap\less\mixins\image.less" />
-    <Content Include="wwwroot\lib\bootstrap\less\mixins\labels.less" />
-    <Content Include="wwwroot\lib\bootstrap\less\mixins\list-group.less" />
-    <Content Include="wwwroot\lib\bootstrap\less\mixins\nav-divider.less" />
-    <Content Include="wwwroot\lib\bootstrap\less\mixins\nav-vertical-align.less" />
-    <Content Include="wwwroot\lib\bootstrap\less\mixins\opacity.less" />
-    <Content Include="wwwroot\lib\bootstrap\less\mixins\pagination.less" />
-    <Content Include="wwwroot\lib\bootstrap\less\mixins\panels.less" />
-    <Content Include="wwwroot\lib\bootstrap\less\mixins\progress-bar.less" />
-    <Content Include="wwwroot\lib\bootstrap\less\mixins\reset-filter.less" />
-    <Content Include="wwwroot\lib\bootstrap\less\mixins\reset-text.less" />
-    <Content Include="wwwroot\lib\bootstrap\less\mixins\resize.less" />
-    <Content Include="wwwroot\lib\bootstrap\less\mixins\responsive-visibility.less" />
-    <Content Include="wwwroot\lib\bootstrap\less\mixins\size.less" />
-    <Content Include="wwwroot\lib\bootstrap\less\mixins\tab-focus.less" />
-    <Content Include="wwwroot\lib\bootstrap\less\mixins\table-row.less" />
-    <Content Include="wwwroot\lib\bootstrap\less\mixins\text-emphasis.less" />
-    <Content Include="wwwroot\lib\bootstrap\less\mixins\text-overflow.less" />
-    <Content Include="wwwroot\lib\bootstrap\less\mixins\vendor-prefixes.less" />
-    <Content Include="wwwroot\lib\bootstrap\less\modals.less" />
-    <Content Include="wwwroot\lib\bootstrap\less\navbar.less" />
-    <Content Include="wwwroot\lib\bootstrap\less\navs.less" />
-    <Content Include="wwwroot\lib\bootstrap\less\normalize.less" />
-    <Content Include="wwwroot\lib\bootstrap\less\pager.less" />
-    <Content Include="wwwroot\lib\bootstrap\less\pagination.less" />
-    <Content Include="wwwroot\lib\bootstrap\less\panels.less" />
-    <Content Include="wwwroot\lib\bootstrap\less\popovers.less" />
-    <Content Include="wwwroot\lib\bootstrap\less\print.less" />
-    <Content Include="wwwroot\lib\bootstrap\less\progress-bars.less" />
-    <Content Include="wwwroot\lib\bootstrap\less\responsive-embed.less" />
-    <Content Include="wwwroot\lib\bootstrap\less\responsive-utilities.less" />
-    <Content Include="wwwroot\lib\bootstrap\less\scaffolding.less" />
-    <Content Include="wwwroot\lib\bootstrap\less\tables.less" />
-    <Content Include="wwwroot\lib\bootstrap\less\theme.less" />
-    <Content Include="wwwroot\lib\bootstrap\less\thumbnails.less" />
-    <Content Include="wwwroot\lib\bootstrap\less\tooltip.less" />
-    <Content Include="wwwroot\lib\bootstrap\less\type.less" />
-    <Content Include="wwwroot\lib\bootstrap\less\utilities.less" />
-    <Content Include="wwwroot\lib\bootstrap\less\variables.less" />
-    <Content Include="wwwroot\lib\bootstrap\less\wells.less" />
-    <Content Include="wwwroot\lib\bootstrap\LICENSE" />
-    <Content Include="wwwroot\lib\bootstrap\nuget\bootstrap.less.nuspec" />
-    <Content Include="wwwroot\lib\bootstrap\nuget\bootstrap.nuspec" />
-    <Content Include="wwwroot\lib\bootstrap\nuget\MyGet.ps1" />
-    <Content Include="wwwroot\lib\bootstrap\package.json" />
-    <Content Include="wwwroot\lib\bootstrap\README.md" />
+    <Content Include="wwwroot\lib\bootstrap\dist\js\bootstrap.js" />
+    <Content Include="wwwroot\lib\bootstrap\dist\js\bootstrap.min.js" />
+    <Content Include="wwwroot\lib\bootstrap\dist\js\npm.js" />
     <Content Include="wwwroot\lib\font-awesome\.bower.json" />
     <Content Include="wwwroot\lib\font-awesome\.npmignore" />
     <Content Include="wwwroot\lib\font-awesome\bower.json" />
@@ -625,6 +542,8 @@
     <Content Include="wwwroot\lib\textAngular\CONTRIBUTING.md" />
     <Content Include="wwwroot\lib\textAngular\README.md" />
     <Content Include="theme\js\PIE.php" />
+    <Content Include="wwwroot\lib\angular-carousel\dist\angular-carousel.css.map" />
+    <Content Include="wwwroot\lib\angular-touch\angular-touch.min.js.map" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="app\app.config.js" />
@@ -712,34 +631,6 @@
     <Content Include="wwwroot\lib\angular\angular.js" />
     <Content Include="wwwroot\lib\angular\angular.min.js" />
     <Content Include="wwwroot\lib\angular\index.js" />
-    <Content Include="wwwroot\lib\bootstrap\dist\css\bootstrap-theme.css" />
-    <Content Include="wwwroot\lib\bootstrap\dist\css\bootstrap-theme.min.css" />
-    <Content Include="wwwroot\lib\bootstrap\dist\css\bootstrap.css" />
-    <Content Include="wwwroot\lib\bootstrap\dist\css\bootstrap.min.css" />
-    <Content Include="wwwroot\lib\bootstrap\dist\fonts\glyphicons-halflings-regular.svg" />
-    <Content Include="wwwroot\lib\bootstrap\dist\js\bootstrap.js" />
-    <Content Include="wwwroot\lib\bootstrap\dist\js\bootstrap.min.js" />
-    <Content Include="wwwroot\lib\bootstrap\dist\js\npm.js" />
-    <Content Include="wwwroot\lib\bootstrap\fonts\glyphicons-halflings-regular.svg" />
-    <Content Include="wwwroot\lib\bootstrap\Gruntfile.js" />
-    <Content Include="wwwroot\lib\bootstrap\grunt\bs-commonjs-generator.js" />
-    <Content Include="wwwroot\lib\bootstrap\grunt\bs-glyphicons-data-generator.js" />
-    <Content Include="wwwroot\lib\bootstrap\grunt\bs-lessdoc-parser.js" />
-    <Content Include="wwwroot\lib\bootstrap\grunt\bs-raw-files-generator.js" />
-    <Content Include="wwwroot\lib\bootstrap\grunt\change-version.js" />
-    <Content Include="wwwroot\lib\bootstrap\js\affix.js" />
-    <Content Include="wwwroot\lib\bootstrap\js\alert.js" />
-    <Content Include="wwwroot\lib\bootstrap\js\button.js" />
-    <Content Include="wwwroot\lib\bootstrap\js\carousel.js" />
-    <Content Include="wwwroot\lib\bootstrap\js\collapse.js" />
-    <Content Include="wwwroot\lib\bootstrap\js\dropdown.js" />
-    <Content Include="wwwroot\lib\bootstrap\js\modal.js" />
-    <Content Include="wwwroot\lib\bootstrap\js\popover.js" />
-    <Content Include="wwwroot\lib\bootstrap\js\scrollspy.js" />
-    <Content Include="wwwroot\lib\bootstrap\js\tab.js" />
-    <Content Include="wwwroot\lib\bootstrap\js\tooltip.js" />
-    <Content Include="wwwroot\lib\bootstrap\js\transition.js" />
-    <Content Include="wwwroot\lib\bootstrap\package.js" />
     <Content Include="wwwroot\lib\font-awesome\.gitignore" />
     <Content Include="wwwroot\lib\font-awesome\css\font-awesome.css" />
     <Content Include="wwwroot\lib\font-awesome\css\font-awesome.min.css" />
@@ -1415,6 +1306,8 @@
     <Content Include="wwwroot\lib\textAngular\src\textAngular.css" />
     <Content Include="wwwroot\lib\textAngular\src\textAngularSetup.js" />
     <Content Include="wwwroot\lib\textAngular\src\validators.js" />
+    <None Include="Properties\PublishProfiles\Default Settings %282%29.pubxml" />
+    <None Include="Properties\PublishProfiles\Default Settings.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
