--- a/TractorSpecs/bower.json
+++ b/TractorSpecs/bower.json
@@ -15,7 +15,8 @@
     "ng-file-model": "*",
     "superfish": "1.7.9",
     "jquery": "3.1.1",
-    "jquery.easing": "1.3.1"
+    "jquery.easing": "1.3.1",
+    "angular-carousel": "~1.0.1"
   },
   "resolutions": {
     "angular": "1.5.8"
