--- a/TractorSpecs/TractorSpecs.csproj
+++ b/TractorSpecs/TractorSpecs.csproj
@@ -295,6 +295,7 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\specClassesController.cs" />
     <Compile Include="Controllers\specificationsController.cs" />
     <Compile Include="Controllers\makesController.cs" />
     <Compile Include="Controllers\usersController.cs" />
@@ -1941,6 +1942,9 @@
     <EmbeddedResource Include="Migrations\201611181346287_InitialSecurityMigration.resx">
       <DependentUpon>201611181346287_InitialSecurityMigration.cs</DependentUpon>
     </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Service References\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
