--- a/TractorSpecs/TractorSpecs.csproj
+++ b/TractorSpecs/TractorSpecs.csproj
@@ -295,6 +295,7 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\EquipmentClassesController.cs" />
     <Compile Include="Controllers\specClassesController.cs" />
     <Compile Include="Controllers\specificationsController.cs" />
     <Compile Include="Controllers\makesController.cs" />
@@ -322,6 +323,10 @@
     <Compile Include="Providers\ApplicationOAuthProvider.cs" />
     <Compile Include="Results\ChallengeResult.cs" />
     <Compile Include="Startup.cs" />
+    <Content Include="app\equipment-class\equipment-classes.html" />
+    <Content Include="app\equipment-class\equipment-classes.controller.js" />
+    <Content Include="app\equipment-class\equipment-class.controller.js" />
+    <Content Include="app\equipment-class\equipment-class.html" />
     <Content Include="app\layout\layout.controller.js" />
     <Content Include="app\make\makes.html" />
     <Content Include="app\make\makes.controller.js" />
@@ -1101,22 +1106,6 @@
   <ItemGroup>
     <Content Include="app\app.config.js" />
     <Content Include="app\app.module.js" />
-    <Content Include="app\author\add-author.controller.js" />
-    <Content Include="app\author\add-author.html" />
-    <Content Include="app\author\authors.controller.js" />
-    <Content Include="app\author\authors.html" />
-    <Content Include="app\author\update-author.controller.js" />
-    <Content Include="app\author\update-author.html" />
-    <Content Include="app\author\view-author.controller.js" />
-    <Content Include="app\author\view-author.html" />
-    <Content Include="app\blog-entry\add-blog-entry.controller.js" />
-    <Content Include="app\blog-entry\add-blog-entry.html" />
-    <Content Include="app\blog-entry\blog-entries.controller.js" />
-    <Content Include="app\blog-entry\blog-entries.html" />
-    <Content Include="app\blog-entry\update-blog-entry.controller.js" />
-    <Content Include="app\blog-entry\update-blog-entry.html" />
-    <Content Include="app\blog-entry\view-blog-entry.controller.js" />
-    <Content Include="app\blog-entry\view-blog-entry.html" />
     <Content Include="app\home\home.controller.js" />
     <Content Include="app\home\home.html" />
     <Content Include="app\login\login.controller.js" />
