- Added method that will get a model with all pertinent specifications whether they have values or not.

--- a/TractorSpecs.Core/TractorSpecs.Core.csproj
+++ b/TractorSpecs.Core/TractorSpecs.Core.csproj
@@ -119,6 +119,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Interfaces\IEfQueryModelWithEmptySpecificationsByModelId.cs" />
     <Compile Include="Interfaces\ISettingService.cs" />
     <Compile Include="Models\APIkey.cs" />
     <Compile Include="Models\APIspecReqCounter.cs" />
