--- a/TractorSpecs.Infrastructure/packages.config
+++ b/TractorSpecs.Infrastructure/packages.config
@@ -6,6 +6,7 @@
   <package id="elmah.corelibrary" version="1.2.2" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
   <package id="EntityFramework.MappingAPI" version="6.1.0.9" targetFramework="net45" />
+  <package id="morelinq" version="2.2.0" targetFramework="net452" />
   <package id="System.Linq.Dynamic" version="1.0.6" targetFramework="net452" />
   <package id="TrackerEnabledDbContext" version="3.6.1" targetFramework="net452" />
   <package id="TrackerEnabledDbContext.Common" version="3.6.1" targetFramework="net452" />
