--- a/TractorSpecs/Web.config
+++ b/TractorSpecs/Web.config
@@ -16,6 +16,8 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="from" value="noreply@tractorspecs.com"/>
+    <add key="to" value="messicks@tractorspecs.com"/>
   </appSettings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
