--- a/TractorSpecs/TractorSpecs.csproj
+++ b/TractorSpecs/TractorSpecs.csproj
@@ -295,6 +295,7 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\EmailController.cs" />
     <Compile Include="Controllers\EquipmentClassesController.cs" />
     <Compile Include="Controllers\specNamesController.cs" />
     <Compile Include="Controllers\specClassesController.cs" />
@@ -324,6 +325,8 @@
     <Compile Include="Providers\ApplicationOAuthProvider.cs" />
     <Compile Include="Results\ChallengeResult.cs" />
     <Compile Include="Startup.cs" />
+    <Content Include="app\contact-us\contact-us.controller.js" />
+    <Content Include="app\contact-us\contact-us.html" />
     <Content Include="app\equipment-class\equipment-classes.html" />
     <Content Include="app\equipment-class\equipment-classes.controller.js" />
     <Content Include="app\equipment-class\equipment-class.controller.js" />
