- Implemented the search function.

--- a/TractorSpecs/TractorSpecs.csproj
+++ b/TractorSpecs/TractorSpecs.csproj
@@ -342,6 +342,8 @@
     <Content Include="app\make\make.html" />
     <Content Include="app\about\about.controller.js" />
     <Content Include="app\about\about.html" />
+    <Content Include="app\search\search.controller.js" />
+    <Content Include="app\search\search.html" />
     <Content Include="Images\1.jpg" />
     <Content Include="Images\2.jpg" />
     <Content Include="Images\3.jpg" />
