--- a/TractorSpecs/Web.config
+++ b/TractorSpecs/Web.config
@@ -71,6 +71,26 @@
         <add name="X-Powered-By" value="ASP.NET" />
       </customHeaders>
     </httpProtocol>
+    <rewrite>
+      <!--https://blog.johnnyreilly.com/2015/05/a-tale-of-angular-html5mode-aspnet-mvc.html-->
+      <rules>
+        <rule name="Main Rule" stopProcessing="true">
+          <match url=".*" />
+          <conditions logicalGrouping="MatchAll">
+            <!-- Allows "api/" prefixed URLs to still hit Web API controllers 
+                             as defined in WebApiConfig -->
+            <add input="{REQUEST_URI}" pattern="api/" ignoreCase="true" negate="true" />
+            
+            <add input="{REQUEST_URI}" pattern="odata/" ignoreCase="true" negate="true" />
+
+            <!-- Static files and directories can be served so partials etc can be loaded -->
+            <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />
+            <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true" />
+          </conditions>
+          <action type="Rewrite" url="/" />
+        </rule>
+      </rules>
+    </rewrite>
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
