--- a/TractorSpecs/Web.config
+++ b/TractorSpecs/Web.config
@@ -83,6 +83,8 @@
             
             <add input="{REQUEST_URI}" pattern="odata/" ignoreCase="true" negate="true" />
 
+            <add input="{REQUEST_URI}" pattern="bundles/" ignoreCase="true" negate="true" />
+
             <!-- Static files and directories can be served so partials etc can be loaded -->
             <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />
             <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true" />
