- Minor tweaks to interface.

--- a/TractorSpecs/Web.config
+++ b/TractorSpecs/Web.config
@@ -85,6 +85,13 @@
 
             <add input="{REQUEST_URI}" pattern="bundles/" ignoreCase="true" negate="true" />
 
+            <add input="{REQUEST_URI}" pattern="Content/" ignoreCase="true" negate="true" />
+
+            <add input="{REQUEST_URI}" pattern="theme/" ignoreCase="true" negate="true" />
+
+            <add input="{REQUEST_URI}" pattern="class/" ignoreCase="true" negate="true" />
+
+
             <!-- Static files and directories can be served so partials etc can be loaded -->
             <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />
             <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true" />
