- Added a speed increase on the searchcount method.  - Fixed the home page link not working bug.  - Improved handling of data on title and alt on the html elements.  - Moved email configurationn handling to the web.config for easy access.

--- a/TractorSpecs/Web.config
+++ b/TractorSpecs/Web.config
@@ -17,7 +17,7 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="from" value="noreply@tractorspecs.com"/>
-    <add key="to" value="messicks@tractorspecs.com"/>
+    <add key="to" value="neilm@messicks.com"/>
   </appSettings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
@@ -162,11 +162,18 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-  <!--The below has been commented out because arvixe does not use the new roslyn compiler-->
+  <!--The below has been commented out because many older asp.net hosting providers do not use the new roslyn compiler-->
   <!--<system.codedom>
     <compilers>
       <compiler language="c#;cs;csharp" extension=".cs" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.CSharpCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:6 /nowarn:1659;1699;1701" />
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>-->
+  <system.net>
+    <mailSettings>
+      <smtp from="noreply@tractorspecs.com">
+        <network host="192.168.2.2" port="25" userName="username" password="secret" defaultCredentials="true" />
+      </smtp>
+    </mailSettings>
+  </system.net>
 </configuration>
