--- a/TractorSpecs/bower.json
+++ b/TractorSpecs/bower.json
@@ -16,7 +16,8 @@
     "superfish": "1.7.9",
     "jquery": "3.1.1",
     "jquery.easing": "1.3.1",
-    "angular-carousel": "~1.0.1"
+    "angular-carousel": "~1.0.1",
+    "angular-loading-bar": "^0.9.0"
   },
   "resolutions": {
     "angular": "1.5.8"
