- Added model price and links to the update-model angular controller and view.

--- a/TractorSpecs/TractorSpecs.csproj
+++ b/TractorSpecs/TractorSpecs.csproj
@@ -297,6 +297,7 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\ClientInformationController.cs" />
     <Compile Include="Controllers\EmailController.cs" />
+    <Compile Include="Controllers\linksController.cs" />
     <Compile Include="Controllers\reviewsController.cs" />
     <Compile Include="Controllers\EquipmentClassesController.cs" />
     <Compile Include="Controllers\specNamesController.cs" />
