--- a/TractorSpecs.Infrastructure/TractorSpecs.Infrastructure.csproj
+++ b/TractorSpecs.Infrastructure/TractorSpecs.Infrastructure.csproj
@@ -112,6 +112,14 @@
     <Compile Include="Migrations\201701291925510_UpdatedObjectModel.Designer.cs">
       <DependentUpon>201701291925510_UpdatedObjectModel.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201704052141038_ConvertReviewIdFromBigIntToInt.cs" />
+    <Compile Include="Migrations\201704052141038_ConvertReviewIdFromBigIntToInt.Designer.cs">
+      <DependentUpon>201704052141038_ConvertReviewIdFromBigIntToInt.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201704052203149_ConvertLinkIdFromBigIntToInt.cs" />
+    <Compile Include="Migrations\201704052203149_ConvertLinkIdFromBigIntToInt.Designer.cs">
+      <DependentUpon>201704052203149_ConvertLinkIdFromBigIntToInt.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
@@ -156,6 +164,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201701291925510_UpdatedObjectModel.resx">
       <DependentUpon>201701291925510_UpdatedObjectModel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201704052141038_ConvertReviewIdFromBigIntToInt.resx">
+      <DependentUpon>201704052141038_ConvertReviewIdFromBigIntToInt.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201704052203149_ConvertLinkIdFromBigIntToInt.resx">
+      <DependentUpon>201704052203149_ConvertLinkIdFromBigIntToInt.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
