--- a/TractorSpecs.Core/TractorSpecs.Core.csproj
+++ b/TractorSpecs.Core/TractorSpecs.Core.csproj
@@ -120,6 +120,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Interfaces\IEfQueryModelWithEmptySpecificationsByModelId.cs" />
+    <Compile Include="Interfaces\IFileSaver.cs" />
     <Compile Include="Interfaces\ISettingService.cs" />
     <Compile Include="Models\APIkey.cs" />
     <Compile Include="Models\APIspecReqCounter.cs" />
@@ -136,7 +137,7 @@
     <Compile Include="Models\modelAlia.cs" />
     <Compile Include="Models\modelPicture.cs" />
     <Compile Include="Models\modelPrice.cs" />
-    <Compile Include="Models\Partials\make.cs" />
+    <Compile Include="Models\Partials\modelPicture.cs" />
     <Compile Include="Models\PrintView.cs" />
     <Compile Include="Models\review.cs" />
     <Compile Include="Models\rssDealerID.cs" />
@@ -151,6 +152,8 @@
     <Compile Include="Objects\EventType.cs" />
     <Compile Include="Objects\makesWithModelCount.cs" />
     <Compile Include="Interfaces\IModelService.cs" />
+    <Compile Include="Interfaces\IModelPictureService.cs" />
+    <Compile Include="Services\ModelPictureService.cs" />
     <Compile Include="Services\ModelService.cs" />
     <Compile Include="Services\SettingService.cs" />
     <Compile Include="Interfaces\IEnvironmentConfigSettingsGetter.cs" />
