- Fixed bug that was preventing the model specification and the specchangelog from being saved.  - Added the ability to go to a specific class page of a manufacturer from the classes page.

--- a/TractorSpecs/TractorSpecs.csproj
+++ b/TractorSpecs/TractorSpecs.csproj
@@ -303,6 +303,7 @@
     <Compile Include="Controllers\modelPricesController.cs" />
     <Compile Include="Controllers\reviewsController.cs" />
     <Compile Include="Controllers\EquipmentClassesController.cs" />
+    <Compile Include="Controllers\specChangeLogsController.cs" />
     <Compile Include="Controllers\specNamesController.cs" />
     <Compile Include="Controllers\specClassesController.cs" />
     <Compile Include="Controllers\specificationsController.cs" />
