--- a/TractorSpecs.Infrastructure/TractorSpecs.Infrastructure.csproj
+++ b/TractorSpecs.Infrastructure/TractorSpecs.Infrastructure.csproj
@@ -121,6 +121,18 @@
     <Compile Include="Migrations\201704071938440_ModelPriceModelConvertPriceFromMoneyToDouble.Designer.cs">
       <DependentUpon>201704071938440_ModelPriceModelConvertPriceFromMoneyToDouble.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201704112050448_ConvertSpecificationIdToInt.cs" />
+    <Compile Include="Migrations\201704112050448_ConvertSpecificationIdToInt.Designer.cs">
+      <DependentUpon>201704112050448_ConvertSpecificationIdToInt.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201704112102099_ConvertSpecChangeLogIdToInt.cs" />
+    <Compile Include="Migrations\201704112102099_ConvertSpecChangeLogIdToInt.Designer.cs">
+      <DependentUpon>201704112102099_ConvertSpecChangeLogIdToInt.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201704122021458_SpecChangeLogConvertSpecificationIdToInt.cs" />
+    <Compile Include="Migrations\201704122021458_SpecChangeLogConvertSpecificationIdToInt.Designer.cs">
+      <DependentUpon>201704122021458_SpecChangeLogConvertSpecificationIdToInt.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
@@ -172,6 +184,15 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201704071938440_ModelPriceModelConvertPriceFromMoneyToDouble.resx">
       <DependentUpon>201704071938440_ModelPriceModelConvertPriceFromMoneyToDouble.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201704112050448_ConvertSpecificationIdToInt.resx">
+      <DependentUpon>201704112050448_ConvertSpecificationIdToInt.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201704112102099_ConvertSpecChangeLogIdToInt.resx">
+      <DependentUpon>201704112102099_ConvertSpecChangeLogIdToInt.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201704122021458_SpecChangeLogConvertSpecificationIdToInt.resx">
+      <DependentUpon>201704122021458_SpecChangeLogConvertSpecificationIdToInt.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
